[tool.poetry]
name = "project-name"
version = "0.1.0"
description = ""
authors = ["nootify <48371116+nootify@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.17.1"

[tool.poetry.dev-dependencies]
coverage = "^5.5"
flake8 = "^3.9.2"
black = "^21.5b1"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
